--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "EpiVerse"
+  title: "rOpenSci"
   cookie-consent:
     type: express
   navbar:
@@ -18,12 +18,6 @@ website:
             url: https://github.com/ropensci-review-tools/orgmetrics/discussions
           - text: Source Code
             url: https://github.com/ropensci-review-tools/orgmetrics
-          - text: github.com/reconhub
-            url: https://github.com/reconhub
-          - text: github.com/epiverse-trace
-            url: https://github.com/epiverse-trace
-          - text: github.com/reconverse
-            url: https://github.com/reconverse
 
 format:
   html:
